--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
   "dependencies": {
-    "twitter": "1.7.0"
+    "twitter": "1.7.0",
+    "mailgun-js": "0.9.1",
+    "mailcomposer": "4.0.2"
   }
 }
